--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^5.4.1"
   },
   "dependencies": {
+    "lucide-react": "^0.556.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "swiper": "^11.1.8"
