--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,11 +2,11 @@
   "compilerOptions": {
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
+    "skipLibCheck": true,
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "skipLibCheck": true
+    "strict": true
   },
   "include": ["vite.config.ts"]
 }
